--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^7.5.1",
     "react-scroll-to-top": "^3.1.0",
-    "react-slick": "^0.30.3",
+    "react-slick": "^0.31.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
